--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -60,8 +60,8 @@ library
   extra-libraries:     fdb_c
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.10 && <4.11
-                       , bytestring
+  build-depends:       base >=4.10 && <5
+                       , bytestring >= 0.10.8.2 && <0.11
 
   build-tools:         c2hs
 
