--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -49,6 +49,7 @@ cabal-version:       >=1.10
 library
   -- Modules exported by the library.
   exposed-modules:   FoundationDB
+                     , FoundationDB.Options
 
   -- Modules included in this library but not exported.
   -- other-modules:
@@ -71,8 +72,6 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
 
-  --includes:            foundationdb/fdb_c.h
-
   default-extensions: CPP
 
   CC-Options: -std=c99
@@ -82,6 +81,18 @@ library
   c-sources:           cbits/fdbc_wrapper.c
 
   ghc-options:         -Wall -g
+
+executable generate-options
+  build-depends:      base >=4.10 && <5
+                      , xml >=1.3
+                      , haskell-src-exts >=1.20
+                      , optparse-generic >=1.2
+                      , errors >=2.2
+  default-language:   Haskell2010
+  ghc-options:        -Wall -g
+  hs-source-dirs:     generate-options
+  main-is:            Main.hs
+  other-modules:      Generate, Parse
 
 test-suite tests
   build-depends:       base >=4.10 && <5
