--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -45,6 +45,10 @@ extra-source-files:  ChangeLog.md
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
 
+flag with-generate-options
+  description:       Also build generate-options executable.
+  Manual:            True
+  Default:           False
 
 library
   -- Modules exported by the library.
@@ -83,11 +87,14 @@ library
   ghc-options:         -Wall -g
 
 executable generate-options
-  build-depends:      base >=4.10 && <5
-                      , xml >=1.3
-                      , haskell-src-exts >=1.20
-                      , optparse-generic >=1.2
-                      , errors >=2.2
+  if flag(with-generate-options)
+    build-depends:      base >=4.10 && <5
+                        , xml >=1.3
+                        , haskell-src-exts >=1.20
+                        , optparse-generic >=1.2
+                        , errors >=2.2
+  else
+    buildable: False
   default-language:   Haskell2010
   ghc-options:        -Wall -g
   hs-source-dirs:     generate-options
