--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -107,6 +107,8 @@ executable generate-options
 test-suite tests
   build-depends:       base >=4.10 && <5
                        , foundationdb-haskell
+                       , hspec
+                       , bytestring >= 0.10.8.2 && <0.11
   default-language:    Haskell2010
   ghc-options:         -Wall -Werror -threaded -g
   hs-source-dirs:      tests
