--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -54,6 +54,9 @@ library
   -- Modules exported by the library.
   exposed-modules:   FoundationDB
                      , FoundationDB.Internal.Bindings
+                     , FoundationDB.Layer.Directory
+                     , FoundationDB.Layer.Subspace
+                     , FoundationDB.Layer.Tuple
                      , FoundationDB.Options
 
   -- Modules included in this library but not exported.
@@ -87,7 +90,7 @@ library
 
   c-sources:           cbits/fdbc_wrapper.c
 
-  ghc-options:         -Wall -g
+  ghc-options:         -Wall
 
 executable generate-options
   if flag(with-generate-options)
@@ -99,7 +102,7 @@ executable generate-options
   else
     buildable: False
   default-language:   Haskell2010
-  ghc-options:        -Wall -g
+  ghc-options:        -Wall
   hs-source-dirs:     generate-options
   main-is:            Main.hs
   other-modules:      Generate, Parse
@@ -110,7 +113,7 @@ test-suite tests
                        , hspec
                        , bytestring >= 0.10.8.2 && <0.11
   default-language:    Haskell2010
-  ghc-options:         -Wall -Werror -threaded -g
+  ghc-options:         -Wall -Werror -threaded
   hs-source-dirs:      tests
   main-is:             Properties.hs
   type:                exitcode-stdio-1.0
