--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -70,9 +70,15 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.10 && <5
+                       , array
+                       , binary-search
                        , bytestring >= 0.10.8.2 && <0.11
+                       , cereal
+                       , containers
+                       , integer-gmp
                        , mtl
                        , resourcet
+                       , text
 
   build-tools:         c2hs
 
@@ -112,6 +118,7 @@ test-suite tests
                        , foundationdb-haskell
                        , hspec
                        , bytestring >= 0.10.8.2 && <0.11
+                       , uuid
   default-language:    Haskell2010
   ghc-options:         -Wall -Werror -threaded
   hs-source-dirs:      tests
@@ -119,3 +126,4 @@ test-suite tests
   type:                exitcode-stdio-1.0
   default-extensions:  CPP
   extra-libraries:     fdb_c
+  other-modules:       Properties.FoundationDB.Layer.Tuple
