--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -120,6 +120,8 @@ test-suite tests
                        , foundationdb-haskell
                        , hspec
                        , bytestring >= 0.10.8.2 && <0.11
+                       , QuickCheck
+                       , text
                        , uuid
   default-language:    Haskell2010
   ghc-options:         -Wall -Werror -threaded
