--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -53,12 +53,14 @@ flag with-generate-options
 library
   -- Modules exported by the library.
   exposed-modules:   FoundationDB
+                     , FoundationDB.Error
                      , FoundationDB.Internal.Bindings
                      , FoundationDB.Layer.Directory
                      , FoundationDB.Layer.Subspace
                      , FoundationDB.Layer.Tuple
                      , FoundationDB.Layer.Tuple.Internal
                      , FoundationDB.Options
+                     , FoundationDB.Transaction
                      , FoundationDB.VersionStamp
 
   -- Modules included in this library but not exported.
