--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -56,6 +56,7 @@ library
                      , FoundationDB.Error
                      , FoundationDB.Internal.Bindings
                      , FoundationDB.Layer.Directory
+                     , FoundationDB.Layer.Directory.Internal.HCA
                      , FoundationDB.Layer.Subspace
                      , FoundationDB.Layer.Tuple
                      , FoundationDB.Layer.Tuple.Internal
@@ -79,8 +80,10 @@ library
                        , bytestring >= 0.10.8.2 && <0.11
                        , cereal
                        , containers
+                       , exceptions >=0.9.0
                        , integer-gmp
                        , mtl
+                       , random
                        , resourcet
                        , text
 
