--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -56,7 +56,10 @@ library
                      , FoundationDB.Error
                      , FoundationDB.Internal.Bindings
                      , FoundationDB.Layer.Directory
+                     , FoundationDB.Layer.Directory.Internal
+                     , FoundationDB.Layer.Directory.Internal.Error
                      , FoundationDB.Layer.Directory.Internal.HCA
+                     , FoundationDB.Layer.Directory.Internal.Node
                      , FoundationDB.Layer.Subspace
                      , FoundationDB.Layer.Tuple
                      , FoundationDB.Layer.Tuple.Internal
@@ -129,10 +132,11 @@ test-suite tests
                        , text
                        , uuid
   default-language:    Haskell2010
-  ghc-options:         -Wall -Werror -threaded
+  ghc-options:         -Wall -threaded
   hs-source-dirs:      tests
   main-is:             Properties.hs
   type:                exitcode-stdio-1.0
   default-extensions:  CPP
   extra-libraries:     fdb_c
-  other-modules:       Properties.FoundationDB.Layer.Tuple
+  other-modules:       Properties.FoundationDB.Layer.Tuple,
+                       Properties.FoundationDB.Layer.Directory
