--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -139,4 +139,5 @@ test-suite tests
   default-extensions:  CPP
   extra-libraries:     fdb_c
   other-modules:       Properties.FoundationDB.Layer.Tuple,
-                       Properties.FoundationDB.Layer.Directory
+                       Properties.FoundationDB.Layer.Directory,
+                       Properties.FoundationDB.Layer.Subspace
