--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -56,6 +56,10 @@ library
                      , FoundationDB.Error
                      , FoundationDB.Internal.Bindings
                      , FoundationDB.Layer.Directory
+                     , FoundationDB.Layer.Directory.Internal
+                     , FoundationDB.Layer.Directory.Internal.Error
+                     , FoundationDB.Layer.Directory.Internal.HCA
+                     , FoundationDB.Layer.Directory.Internal.Node
                      , FoundationDB.Layer.Subspace
                      , FoundationDB.Layer.Tuple
                      , FoundationDB.Layer.Tuple.Internal
@@ -79,8 +83,10 @@ library
                        , bytestring >= 0.10.8.2 && <0.11
                        , cereal
                        , containers
+                       , exceptions >=0.9.0
                        , integer-gmp
                        , mtl
+                       , random
                        , resourcet
                        , text
 
@@ -126,10 +132,12 @@ test-suite tests
                        , text
                        , uuid
   default-language:    Haskell2010
-  ghc-options:         -Wall -Werror -threaded
+  ghc-options:         -Wall -threaded
   hs-source-dirs:      tests
   main-is:             Properties.hs
   type:                exitcode-stdio-1.0
   default-extensions:  CPP
   extra-libraries:     fdb_c
-  other-modules:       Properties.FoundationDB.Layer.Tuple
+  other-modules:       Properties.FoundationDB.Layer.Tuple,
+                       Properties.FoundationDB.Layer.Directory,
+                       Properties.FoundationDB.Layer.Subspace
