--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -70,7 +70,6 @@ library
                      , FoundationDB.Layer.Tuple.Internal
                      , FoundationDB.Options
                      , FoundationDB.Transaction
-                     , FoundationDB.Transaction.Internal
                      , FoundationDB.Versionstamp
                      , FoundationDB.Versionstamp.Internal
 
@@ -139,6 +138,7 @@ executable bindingtester
                        , resourcet
                        , pretty-simple
                        , text
+                       , mtl
   else
     buildable: False
   default-language:    Haskell2010
