--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -154,6 +154,7 @@ test-suite tests
                        , QuickCheck
                        , text
                        , uuid
+                       , mtl
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded
   hs-source-dirs:      tests
