--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -154,6 +154,7 @@ test-suite tests
                        , QuickCheck
                        , text
                        , uuid
+                       , mtl
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded
   hs-source-dirs:      tests
@@ -163,4 +164,5 @@ test-suite tests
   extra-libraries:     fdb_c
   other-modules:       Properties.FoundationDB.Layer.Tuple,
                        Properties.FoundationDB.Layer.Directory,
-                       Properties.FoundationDB.Layer.Subspace
+                       Properties.FoundationDB.Layer.Subspace,
+                       Properties.FoundationDB.Transaction
