--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -87,6 +87,12 @@ library
                        , array
                        , binary-search
                        , bytestring >= 0.10.8.2 && <0.11
+                       -- persist for serialization, cereal for deserialization
+                       -- hopefully we can use just persist in the future, since
+                       -- it's supposed to be faster. It currently lacks
+                       -- look ahead mechanisms, though, which the current code
+                       -- needs.
+                       , persist
                        , cereal
                        , containers
                        , exceptions >=0.9.0
