--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -94,6 +94,7 @@ library
                        , random
                        , resourcet
                        , text
+                       , deepseq
 
   build-tools:         c2hs
 
@@ -174,4 +175,5 @@ benchmark tuple-bench
   build-depends:       base >=4.10 && <5
                        , foundationdb-haskell
                        , gauge
+                       , bytestring >= 0.10.8.2 && <0.11
   default-language:    Haskell2010
