--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -85,7 +85,6 @@ library
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.10 && <5
                        , array
-                       , binary-search
                        , bytestring >= 0.10.8.2 && <0.11
                        , cereal
                        , containers
@@ -95,6 +94,7 @@ library
                        , random
                        , resourcet
                        , text
+                       , deepseq
 
   build-tools:         c2hs
 
@@ -167,3 +167,13 @@ test-suite tests
                        Properties.FoundationDB.Layer.Directory,
                        Properties.FoundationDB.Layer.Subspace,
                        Properties.FoundationDB.Transaction
+
+benchmark tuple-bench
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      bench/tuple/
+  main-is:             Main.hs
+  build-depends:       base >=4.10 && <5
+                       , foundationdb-haskell
+                       , gauge
+                       , bytestring >= 0.10.8.2 && <0.11
+  default-language:    Haskell2010
