--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -112,7 +112,7 @@ library
 
   c-sources:           cbits/fdbc_wrapper.c
 
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
 
 executable generate-options
   if flag(with-generate-options)
