--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -59,6 +59,7 @@ library
   -- Modules exported by the library.
   exposed-modules:   FoundationDB
                      , FoundationDB.Error
+                     , FoundationDB.Error.Internal
                      , FoundationDB.Internal.Bindings
                      , FoundationDB.Layer.Directory
                      , FoundationDB.Layer.Directory.Internal
@@ -112,7 +113,7 @@ library
 
   c-sources:           cbits/fdbc_wrapper.c
 
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
 
 executable generate-options
   if flag(with-generate-options)
