Remove ResourceT, add MonadBaseControl instance
All of our usage of ResourceT can be easily handled by ForeignPtr,
with less complexity. This allows us to add a MonadBaseControl
instance, which lets me use streamly in my project.

--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -88,10 +88,10 @@ library
                        , integer-gmp
                        , mtl
                        , random
-                       , resourcet
                        , text
                        , deepseq
-
+                       , monad-control
+                       , transformers-base
   build-tools:         c2hs
 
   -- Directories containing source files.
