Split options into separate namespaces
The latest set of options includes options with identical names
that can be either per-transaction or set on the entire
DB connection. This caused name collisions in the Options module.
The solution is to split it into separate modules.

--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -64,7 +64,10 @@ library
                      , FoundationDB.Layer.Subspace
                      , FoundationDB.Layer.Tuple
                      , FoundationDB.Layer.Tuple.Internal
-                     , FoundationDB.Options
+                     , FoundationDB.Options.DatabaseOption
+                     , FoundationDB.Options.MutationType
+                     , FoundationDB.Options.NetworkOption
+                     , FoundationDB.Options.TransactionOption
                      , FoundationDB.Transaction
                      , FoundationDB.Versionstamp
                      , FoundationDB.Versionstamp.Internal
