--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -50,6 +50,27 @@ flag with-generate-options
   Manual:            True
   Default:           False
 
+flag fdb-version-520
+  description: Indicates that we are building against version 5.2.x of fdb_c.h
+               Only one of these flags may be specified. If none are specified,
+               6.2.x is assumed.
+  Manual:      True
+  Default:     False
+
+flag fdb-version-600
+  description: Indicates that we are building against version 6.0.x of fdb_c.h
+               Only one of these flags may be specified. If none are specified,
+               6.2.x is assumed.
+  Manual:      True
+  Default:     False
+
+flag fdb-version-610
+  description: Indicates that we are building against version 6.1.x of fdb_c.h
+               Only one of these flags may be specified. If none are specified,
+               6.2.x is assumed.
+  Manual:      True
+  Default:     False
+
 library
   -- Modules exported by the library.
   exposed-modules:   FoundationDB
@@ -105,8 +126,6 @@ library
 
   default-extensions: CPP
 
-  CC-Options: -std=c99
-
   include-dirs:        include
 
   c-sources:           cbits/fdbc_wrapper.c
@@ -117,6 +136,19 @@ library
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
+
+  CC-Options: -std=c99 -DFDB_API_VERSION=620
+  CPP-Options: -DFDB_API_VERSION=620
+
+  if flag(fdb-version-520)
+    CC-Options: -std=c99 -DFDB_API_VERSION=520
+    CPP-Options: -DFDB_API_VERSION=520
+  if flag(fdb-version-600)
+    CC-Options: -std=c99 -DFDB_API_VERSION=600
+    CPP-Options: -DFDB_API_VERSION=600
+  if flag(fdb-version-610)
+    CC-Options: -std=c99 -DFDB_API_VERSION=610
+    CPP-Options: -DFDB_API_VERSION=610
 
 executable generate-options
   if flag(with-generate-options)
