--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -187,6 +187,18 @@ test-suite tests
                        Properties.FoundationDB.Layer.Subspace,
                        Properties.FoundationDB.Transaction,
                        Properties.FoundationDB.Versionstamp.Internal
+  CC-Options: -std=c99 -DFDB_API_VERSION=620
+  CPP-Options: -DFDB_API_VERSION=620
+
+  if flag(fdb-version-520)
+    CC-Options: -std=c99 -DFDB_API_VERSION=520
+    CPP-Options: -DFDB_API_VERSION=520
+  if flag(fdb-version-600)
+    CC-Options: -std=c99 -DFDB_API_VERSION=600
+    CPP-Options: -DFDB_API_VERSION=600
+  if flag(fdb-version-610)
+    CC-Options: -std=c99 -DFDB_API_VERSION=610
+    CPP-Options: -DFDB_API_VERSION=610
 
 benchmark tuple-bench
   type:                exitcode-stdio-1.0
