--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -53,21 +53,28 @@ flag with-generate-options
 flag fdb-version-520
   description: Indicates that we are building against version 5.2.x of fdb_c.h
                Only one of these flags may be specified. If none are specified,
-               6.2.x is assumed.
+               6.3.x is assumed.
   Manual:      True
   Default:     False
 
 flag fdb-version-600
   description: Indicates that we are building against version 6.0.x of fdb_c.h
                Only one of these flags may be specified. If none are specified,
-               6.2.x is assumed.
+               6.3.x is assumed.
   Manual:      True
   Default:     False
 
 flag fdb-version-610
   description: Indicates that we are building against version 6.1.x of fdb_c.h
                Only one of these flags may be specified. If none are specified,
-               6.2.x is assumed.
+               6.3.x is assumed.
+  Manual:      True
+  Default:     False
+
+flag fdb-version-620
+  description: Indicates that we are building against version 6.2.x of fdb_c.h
+               Only one of these flags may be specified. If none are specified,
+               6.3.x is assumed.
   Manual:      True
   Default:     False
 
@@ -137,8 +144,8 @@ library
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
 
-  CC-Options: -std=c99 -DFDB_API_VERSION=620
-  CPP-Options: -DFDB_API_VERSION=620
+  CC-Options: -std=c99 -DFDB_API_VERSION=630
+  CPP-Options: -DFDB_API_VERSION=630
 
   if flag(fdb-version-520)
     CC-Options: -std=c99 -DFDB_API_VERSION=520
@@ -149,6 +156,9 @@ library
   if flag(fdb-version-610)
     CC-Options: -std=c99 -DFDB_API_VERSION=610
     CPP-Options: -DFDB_API_VERSION=610
+  if flag(fdb-version-620)
+    CC-Options: -std=c99 -DFDB_API_VERSION=620
+    CPP-Options: -DFDB_API_VERSION=620
 
 executable generate-options
   if flag(with-generate-options)
@@ -186,8 +196,8 @@ test-suite tests
                        Properties.FoundationDB.Layer.Subspace,
                        Properties.FoundationDB.Transaction,
                        Properties.FoundationDB.Versionstamp.Internal
-  CC-Options: -std=c99 -DFDB_API_VERSION=620
-  CPP-Options: -DFDB_API_VERSION=620
+  CC-Options: -std=c99 -DFDB_API_VERSION=630
+  CPP-Options: -DFDB_API_VERSION=630
 
   if flag(fdb-version-520)
     CC-Options: -std=c99 -DFDB_API_VERSION=520
@@ -198,6 +208,9 @@ test-suite tests
   if flag(fdb-version-610)
     CC-Options: -std=c99 -DFDB_API_VERSION=610
     CPP-Options: -DFDB_API_VERSION=610
+  if flag(fdb-version-620)
+    CC-Options: -std=c99 -DFDB_API_VERSION=620
+    CPP-Options: -DFDB_API_VERSION=620
 
 benchmark tuple-bench
   type:                exitcode-stdio-1.0
