Make Database more abstract, fix getConflicting keys client version check

--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -84,6 +84,7 @@ library
                      , FoundationDB.Error
                      , FoundationDB.Error.Internal
                      , FoundationDB.Internal.Bindings
+                     , FoundationDB.Internal.Database
                      , FoundationDB.Layer.Directory
                      , FoundationDB.Layer.Directory.Internal
                      , FoundationDB.Layer.Directory.Internal.Error
