--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -186,7 +186,8 @@ test-suite tests
                        , QuickCheck >= 2.14.2 && <= 2.15
                        , text >= 1.2.3.0 && <= 1.3
                        , mtl >= 2.2.0 && <= 2.3
-                       , containers
+                       , deepseq >= 1.4.0.0 && <= 1.5
+                       , containers >= 0.5.8.0 && <= 0.7
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded
   hs-source-dirs:      tests
