--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -134,19 +134,19 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.11 && <5
-                       , array >= 0.5.0.0 && <= 0.6
+                       , array >= 0.5.0.0 && < 0.6
                        , bytestring >= 0.10.8.2 && <0.12
-                       , cereal >= 0.5.0.0 && <= 0.6
-                       , containers >= 0.5.8.0 && <= 0.7
-                       , exceptions >=0.9.0 && <= 0.11
-                       , integer-gmp >= 0.5.1.0 && <= 1.1
-                       , mtl >= 2.2.0 && <= 2.3
-                       , random >= 1.1 && <= 1.3
-                       , text >= 1.2.3.0 && <= 1.3
-                       , deepseq >= 1.4.0.0 && <= 1.5
-                       , monad-control >= 1.0.0.0 && <= 1.1
-                       , transformers-base >= 0.4.0 && <= 0.5
-  build-tools:         c2hs >= 0.28.5 && <= 0.29
+                       , cereal >= 0.5.0.0 && < 0.6
+                       , containers >= 0.5.8.0 && < 0.7
+                       , exceptions >=0.9.0 && < 0.11
+                       , integer-gmp >= 0.5.1.0 && < 1.2
+                       , mtl >= 2.2.0 && < 2.3
+                       , random >= 1.1 && < 1.3
+                       , text >= 1.2.3.0 && < 1.3
+                       , deepseq >= 1.4.0.0 && < 1.5
+                       , monad-control >= 1.0.0.0 && < 1.1
+                       , transformers-base >= 0.4.0 && < 0.5
+  build-tools:         c2hs >= 0.28.5 && < 0.29
 
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -202,14 +202,14 @@ executable generate-options
 test-suite tests
   build-depends:       base >=4.10 && <5
                        , foundationdb-haskell
-                       , async >= 2.2.3 && <= 2.3
-                       , hspec >= 2.7.8 && <= 2.8
+                       , async >= 2.2.3 && < 2.3
+                       , hspec >= 2.7.8 && < 2.8
                        , bytestring >= 0.10.8.2 && <0.12
-                       , QuickCheck >= 2.14.2 && <= 2.15
-                       , text >= 1.2.3.0 && <= 1.3
-                       , mtl >= 2.2.0 && <= 2.3
-                       , deepseq >= 1.4.0.0 && <= 1.5
-                       , containers >= 0.5.8.0 && <= 0.7
+                       , QuickCheck >= 2.14.2 && < 2.15
+                       , text >= 1.2.3.0 && < 1.3
+                       , mtl >= 2.2.0 && < 2.3
+                       , deepseq >= 1.4.0.0 && < 1.5
+                       , containers >= 0.5.8.0 && < 0.7
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded
   hs-source-dirs:      tests
@@ -244,7 +244,7 @@ benchmark tuple-bench
   main-is:             Main.hs
   build-depends:       base >=4.10 && <5
                        , foundationdb-haskell
-                       , gauge >= 0.2.5 && <= 0.3
+                       , gauge >= 0.2.5 && < 0.3
                        , bytestring >= 0.10.8.2 && <0.12
-                       , text >= 1.2.3.0 && <= 1.3
+                       , text >= 1.2.3.0 && < 1.3
   default-language:    Haskell2010
