Use newer capi calling convention
This avoids bugs on some platforms.
See https://www.haskell.org/ghc/blog/20210709-capi-usage.html

--- a/foundationdb-haskell.cabal
+++ b/foundationdb-haskell.cabal
@@ -154,7 +154,7 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
 
-  default-extensions: CPP
+  default-extensions: CPP, CApiFFI
 
   include-dirs:        include
 
